Dto added, resources were deleted , controllers, repositories were modified according to the git comments, improvements

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -113,12 +113,17 @@
     <Compile Include="Controllers\InstanceController.cs" />
     <Compile Include="Controllers\JobsController.cs" />
     <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Dto\PaginationDto.cs" />
+    <Compile Include="Dto\DataDto.cs" />
+    <Compile Include="Dto\QueryResultDto.cs" />
+    <Compile Include="Dto\UserDto.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\HashingUtilities.cs" />
     <Compile Include="Helpers\JobsValidationHelper.cs" />
     <Compile Include="Helpers\LdapHelper.cs" />
     <Compile Include="Helpers\LoginInfo.cs" />
     <Compile Include="Helpers\PasswordValidationHelper.cs" />
+    <Compile Include="Helpers\UserMapper.cs" />
     <Compile Include="Helpers\UsersHelper.cs" />
     <Compile Include="Models\ApplicationSettings.cs" />
     <Compile Include="Models\Data.cs" />
@@ -131,7 +136,6 @@
     <Compile Include="Models\ResetPostContent.cs" />
     <Compile Include="Models\TableSettings.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\UserAndTotal.cs" />
     <Compile Include="Models\UserIcon.cs" />
     <Compile Include="Repositories\ApplicationSettingsRepository.cs" />
     <Compile Include="Repositories\ISettingsRepository.cs" />
