add GetReviewArtifactsResultSet and test for getting review artifacts

--- a/blueprint-automationframework/Blueprint-Tests/Tests/ArtifactStoreTests/ArtifactStoreTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/ArtifactStoreTests/ArtifactStoreTests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="ProjectTests.cs" />
     <Compile Include="PublishArtifactTests.cs" />
     <Compile Include="RelationshipsTests.cs" />
+    <Compile Include="ReviewTests.cs" />
     <Compile Include="SaveArtifactTests.cs" />
     <Compile Include="SaveAttachmentTests.cs" />
     <Compile Include="SaveTracesTests.cs" />
