--- a/win_svc/WindowsServices/ImageRenderService.Tests/ImageRenderService.Tests.csproj
+++ b/win_svc/WindowsServices/ImageRenderService.Tests/ImageRenderService.Tests.csproj
@@ -83,6 +83,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+	<Compile Include="..\..\..\svc\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\svc\SolutionAssemblyVersion.cs">
+      <Link>Properties\SolutionAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="ImageGen\BrowserPoolTest.cs" />
     <Compile Include="ImageGen\ImageGenHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
