--- a/win_svc/WindowsServices/ImageRenderService/ImageRenderService.csproj
+++ b/win_svc/WindowsServices/ImageRenderService/ImageRenderService.csproj
@@ -109,6 +109,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+	<Compile Include="..\..\..\svc\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\svc\SolutionAssemblyVersion.cs">
+      <Link>Properties\SolutionAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="ApiServiceController.cs" />
     <Compile Include="ImageGen\BrowserPool.cs" />
     <Compile Include="ImageGen\IBrowserPool.cs" />
