US4793: Deleted useless test and renamed test project to ImpactAnalysisTests.

--- a/blueprint-automationframework/Blueprint-Tests/Tests/ImpactAnalysisTests/ImpactAnalysisTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/ImpactAnalysisTests/ImpactAnalysisTests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{EE6F7461-DF13-4A0A-9848-1B1CAB6FD999}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ImpactAnalysis</RootNamespace>
-    <AssemblyName>ImpactAnalysis</AssemblyName>
+    <RootNamespace>ImpactAnalysisTests</RootNamespace>
+    <AssemblyName>ImpactAnalysisTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
