US5447: Fixed the error when query parameter url is empty.

--- a/win_svc/ImageRenderService/ImageRenderService.csproj
+++ b/win_svc/ImageRenderService/ImageRenderService.csproj
@@ -146,7 +146,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="process.html" />
+    <Content Include="process.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Test.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
