TFS 5447 - Adding a wrapper to abstract away the virtual browser

--- a/win_svc/ImageRenderService/ImageRenderService.csproj
+++ b/win_svc/ImageRenderService/ImageRenderService.csproj
@@ -123,6 +123,8 @@
     <Compile Include="ImageGen\IImageGenHelper.cs" />
     <Compile Include="ImageGen\ImageGenHelper.cs" />
     <Compile Include="ImageGen\ImageGenService.cs" />
+    <Compile Include="ImageGen\IVirtualBrowser.cs" />
+    <Compile Include="ImageGen\VirtualBrowser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\ServiceHelper.cs" />
