--- a/win_svc/ImageRenderService/packages.config
+++ b/win_svc/ImageRenderService/packages.config
@@ -3,5 +3,6 @@
   <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net452" />
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
 </packages>
