Reworks PermissionsChecker/UserPermissionsValidator

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -116,9 +116,8 @@
     <Compile Include="Controllers\JobsController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Helpers\ModelValidator.cs" />
-    <Compile Include="Helpers\PermissionsChecker.cs" />
     <Compile Include="Helpers\UserConverter.cs" />
-    <Compile Include="Helpers\UserPermissionsValidator.cs" />
+    <Compile Include="Helpers\PrivilegesManager.cs" />
     <Compile Include="Helpers\UserValidator.cs" />
     <Compile Include="Models\UserDto.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
