--- a/svc/AdminStore.Tests/AdminStore.Tests.csproj
+++ b/svc/AdminStore.Tests/AdminStore.Tests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Controllers\UsersControllerTests.cs" />
     <Compile Include="Helpers\EmailHelperTests.cs" />
     <Compile Include="Helpers\HashingUtilitiesTests.cs" />
+    <Compile Include="Helpers\PrivilegesManagerTests.cs" />
     <Compile Include="Helpers\SqlExceptionBuilder.cs" />
     <Compile Include="Helpers\SystemEncryptionsTests.cs" />
     <Compile Include="Helpers\LoginInfoTests.cs" />
