--- a/svc/AdminStore.Tests/AdminStore.Tests.csproj
+++ b/svc/AdminStore.Tests/AdminStore.Tests.csproj
@@ -83,6 +83,7 @@
       <Link>Properties\SolutionAssemblyVersion.cs</Link>
     </Compile>
     <Compile Include="App_Start\WebApiConfigTests.cs" />
+    <Compile Include="Repositories\InstanceRolesRepositoryTests.cs" />
     <Compile Include="Controllers\JobsController.ProcessTestGenerationTests.cs" />
     <Compile Include="Controllers\JobsControllerTests.cs" />
     <Compile Include="Controllers\LicensesControllerTests.cs" />
