US5447: Use a queued browser pool, improved error handling, added applications settings.

--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -6,6 +6,12 @@
 
     <appSettings>
       <add key="Service.Name" value="BlueprintImageGen" />
+      <add key="BrowserPool.MaxSize" value="10" />
+      <add key="BrowserPool.WaitTimeSeconds" value="10" />
+      <add key="BrowserResizeEvent.MaxWaitTimeSeconds" value="10" />
+      <add key="BrowserResizeEvent.DelayIntervalMilliseconds" value="10" />
+      <add key="BrowserRender.DelayMilliseconds" value="500" />
+      
     </appSettings>
   
 </configuration>
