--- a/win_svc/ImageRenderService/ImageRenderService.csproj
+++ b/win_svc/ImageRenderService/ImageRenderService.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ImageGen\ImageGenHelper.cs" />
     <Compile Include="ImageGen\ImageGenService.cs" />
     <Compile Include="ImageGen\IVirtualBrowser.cs" />
+    <Compile Include="ImageGen\SemaphoreQueue.cs" />
     <Compile Include="ImageGen\VirtualBrowser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
