--- a/win_svc/ImageRenderService/ImageRenderService.csproj
+++ b/win_svc/ImageRenderService/ImageRenderService.csproj
@@ -127,7 +127,9 @@
     <Compile Include="ImageGen\IImageGenHelper.cs" />
     <Compile Include="ImageGen\ImageGenHelper.cs" />
     <Compile Include="ImageGen\ImageGenService.cs" />
+    <Compile Include="ImageGen\IScreenshot.cs" />
     <Compile Include="ImageGen\IVirtualBrowser.cs" />
+    <Compile Include="ImageGen\Screenshot.cs" />
     <Compile Include="ImageGen\VirtualBrowser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
