--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ArtifactModel\Impl\Baseline.cs" />
     <Compile Include="ArtifactModel\Impl\Collection.cs" />
     <Compile Include="Factories\ImpactAnalysisFactory.cs" />
+    <Compile Include="Impl\AdminRole.cs" />
     <Compile Include="NovaModel\Components\OperationsResults\GetReviewArtifactsResultSet.cs" />
     <Compile Include="ArtifactModel\Impl\RaptorComment.cs" />
     <Compile Include="ArtifactModel\Impl\NovaCollectionBase.cs" />
