--- a/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
@@ -66,7 +66,10 @@
     <Compile Include="JobResultFileTests.cs" />
     <Compile Include="JobsTests.cs" />
     <Compile Include="LicensesTests.cs" />
-    <Compile Include="UsersTests\InstanceUserTests.cs" />
+    <Compile Include="UsersTests\UpdateInstanceUsersTests.cs" />
+    <Compile Include="UsersTests\DeleteInstanceUsersTests.cs" />
+    <Compile Include="UsersTests\GetinstanceUsersTests.cs" />
+    <Compile Include="UsersTests\AddInstanceUserTests.cs" />
     <Compile Include="UsersTests\LoginUserTests.cs" />
     <Compile Include="UsersTests\PasswordRecoveryRequestTests.cs" />
     <Compile Include="ScheduleJobsTests.cs" />
