--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -72,7 +72,7 @@
     <Compile Include="ArtifactModel\INovaProcess.cs" />
     <Compile Include="Factories\ImpactAnalysisFactory.cs" />
     <Compile Include="ModelHelpers\ProcessArtifactWrapper.cs" />
-    <Compile Include="NovaModel\Components\OperationsResults\GetReviewArtifactsResultSet.cs" />
+    <Compile Include="NovaModel\Components\OperationsResults\ReviewContent.cs" />
     <Compile Include="ArtifactModel\Impl\RaptorComment.cs" />
     <Compile Include="ArtifactModel\Impl\NovaCollectionBase.cs" />
     <Compile Include="ArtifactModel\Impl\CollectionItem.cs" />
