add ReviewParticipantsContent to the model add GetReviewParticipants to ArtifactStore add test for GetReviewParticipants

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -102,6 +102,7 @@
     <Compile Include="NovaModel\Components\ImpactAnalysisService\ImpactAnalysisResult.cs" />
     <Compile Include="NovaModel\Components\ImpactAnalysisService\ImpactAnalysisTree.cs" />
     <Compile Include="NovaModel\Impl\ReviewContainer.cs" />
+    <Compile Include="NovaModel\Impl\ReviewParticipantsContent.cs" />
     <Compile Include="NovaModel\Metadata\ItemTypeInformation.cs" />
     <Compile Include="NovaModel\Components\RapidReview\IDiagramElement.cs" />
     <Compile Include="NovaModel\Components\RapidReview\LabelStyle.cs" />
