--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Models\Enums\UserOperationMode.cs" />
     <Compile Include="Models\OperationScope.cs" />
     <Compile Include="Models\DeleteResult.cs" />
+    <Compile Include="Models\Sorting.cs" />
     <Compile Include="Models\UserDto.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\HashingUtilities.cs" />
