Assign users to groups Part 1 - User and Group summary Section

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -114,12 +114,21 @@
     <Compile Include="Controllers\InstanceController.cs" />
     <Compile Include="Controllers\JobsController.cs" />
     <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Helpers\GroupMapper.cs" />
     <Compile Include="Helpers\ModelValidator.cs" />
     <Compile Include="Helpers\UserConverter.cs" />
     <Compile Include="Helpers\PrivilegesManager.cs" />
     <Compile Include="Helpers\UserValidator.cs" />
     <Compile Include="Models\AdminRole.cs" />
+    <Compile Include="Models\Enums\LicenseType.cs" />
+    <Compile Include="Models\Enums\SortOrder.cs" />
     <Compile Include="Models\Enums\UserOperationMode.cs" />
+    <Compile Include="Models\Group.cs" />
+    <Compile Include="Models\GroupDto.cs" />
+    <Compile Include="Models\QueryDataResult.cs" />
+    <Compile Include="Models\Sorting.cs" />
+    <Compile Include="Models\TabularData.cs" />
+    <Compile Include="Models\TabularPagination.cs" />
     <Compile Include="Models\UserDto.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\HashingUtilities.cs" />
